Edit font weight in project buttons to solve contrast issues.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -239,6 +239,7 @@ hr {
       grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
   -webkit-column-gap: 1rem;
           column-gap: 1rem;
+  font-weight: 600;
 }
 
 .contact-me {
